<resources>
    <string name="app_name">our messenger</string>
    <string name="back_to_registration">Back to registration</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_photo">Select Photo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="Profilepic">ProfilePic</string>
    <string name="sign_out">sign out</string>
    <string name="new_message">new message</string>
    <string name="type_a_message">type a message</string>
    <string name="send">send</string>
    <string name="latest_message">Latest Message</string>
</resources>
