<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#69C0E7">


    <EditText
        android:id="@+id/username1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_marginTop="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="@id/username1"
        app:layout_constraintStart_toStartOf="@id/username1"
        app:layout_constraintTop_toBottomOf="@id/username1"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/password1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@id/password1"
        app:layout_constraintTop_toBottomOf="@id/password1" />






</androidx.constraintlayout.widget.ConstraintLayout>
