<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#69C0E7">

    <Button
        android:id="@+id/select_profile_photo_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_profile_photo"
        android:text="@string/select_photo"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/select_profile_photo_imagerView"
        app:civ_border_width="4dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/rounded_profile_photo"
        app:layout_constraintBottom_toBottomOf="@+id/select_profile_photo_button"
        app:layout_constraintEnd_toEndOf="@+id/select_profile_photo_button"
        app:layout_constraintStart_toStartOf="@+id/select_profile_photo_button"
        app:layout_constraintTop_toTopOf="@+id/select_profile_photo_button"
        android:contentDescription="@string/select_photo" />

    <EditText
        android:id="@+id/username2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_profile_photo_button"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:layout_marginTop="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username2"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="203dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email2"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="267dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/register2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/register"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password2"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="344dp" />

    <TextView
        android:id="@+id/already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/register2"
        app:layout_constraintStart_toStartOf="@id/register2"
        app:layout_constraintTop_toBottomOf="@id/register2" />

</androidx.constraintlayout.widget.ConstraintLayout>